added different section headers

--- a/SpamFilter.ipynb
+++ b/SpamFilter.ipynb
@@ -4,19 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spam is bad we don't like it\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test: This is Jon's comment"
+    "## 1. Import all Necessary Packages Here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -24,7 +17,53 @@
    },
    "outputs": [],
    "source": [
-    "import"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some text here: <br>\n",
+    "\n",
+    "\n",
+    "1. Explain why we chose the Spam email dataset\n",
+    "2. Explain what we will be doing in the following sections (comparing and contrasting the performance of the different machine learning techniques)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Decision Trees "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Random Forests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. KNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Perceptron"
    ]
   }
  ],
