Added a Neural Network.

--- a/SpamFilter.ipynb
+++ b/SpamFilter.ipynb
@@ -1241,6 +1241,51 @@
     "plt.title(\"Spam emails\")\n",
     "plt.show"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I made a neural network thing. I'm not super sure what to do with this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/andrew/opt/anaconda3/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:1098: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.863725277113671\n",
+      "Precision: 0.8563701923076923\n",
+      "Recall: 0.7859900717043574\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "spam_nn = MLPClassifier(solver='sgd',activation='relu', alpha=1e-4,learning_rate='adaptive', hidden_layer_sizes=(25,12,6), random_state=1,max_iter=500)\n",
+    "spam_nn.fit(train_x,train_y)\n",
+    "y_pred = spam_nn.predict(X)\n",
+    "accuracy = accuracy_score(Y, y_pred)\n",
+    "precision = precision_score(Y, y_pred)\n",
+    "recall = recall_score(Y, y_pred)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)"
+   ]
   }
  ],
  "metadata": {
