added to introduciton, motivation, and about data + added prose for KNN

--- a/SpamFilter.ipynb
+++ b/SpamFilter.ipynb
@@ -10,14 +10,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "For our project, we will be evaluating the performance of different machine learning techniques on the process of predicting whether an email is spam or not. We will be using the dataset found [here](https://www.kaggle.com/datasets/somesh24/spambase) as the source of our information for training and testing. \n",
+    "\n",
+    "The techniques and models we included to inform our understanding of this task are as follows: Perceptron, Principal Component Analysis, Neural Networks, K-Nearest Neighbors, Decision Trees, Random Forest, Naive Bayes, and Logistic Regression. Not all of these techniques were used to obtain a realistic predictive model (i.e. Percpetron, and Principal Component Analysis in particular), as some were merely included to (a) demonstrate their relatively poor performance when compared to other algorithms more suited to the task and (b) inform our understanding of the dataset, such as whether or not the positive and negative labeled datapoints were linearly separable. \n",
+    "\n",
+    "\n",
+    "## Motivation\n",
+    "\n",
+    "Spam emails are a problem that affect nearly everyone. In fact, according to [DataProt.net](https://dataprot.net/), nearly 85% of all emails are spams. Knowing this, our initial interest in this topic was simply to better understand the nature of (and potentially identify the optimal solutions for) a very widespread problem. We were also interested in this topic due to its practical appeal as a binary-classification problem, in which each each example in the dataset can clearly be labeled as either one of two options: spam or non-spam. This characteristic of our dataset made it easier to apply a variety of different algorithms while also maintaining a relatively high degree of complexity / relevance to our coursework this past semester. \n",
+    "\n",
+    "Lastly, although our primary motivation for this project was to determine which different machine-learning algorithms would perform the best in predicting whether an email was spam, we were also interested in the following questions:\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "1. What machine-learning algorithms would have the greatest precision? After all, accurately predicting an email as spam is not the only relevant consideration for solving this problem; it is also important that the model not create false positives, as labeling a non-spam email as spam (and therefore potentially removing it from someone's inbox) is a significant issue no one would likes to endure. \n",
+    "\n",
+    "2. What features of the dataset are the most relevant in indicating that an email is spam? For instance, are there are any particular words, characters, or sequences of letters/phrases that are highly prevalent across a variety of spam emails? \n",
+    "\n",
+    "\n",
+    "\n",
+    "## About the Dataset\n",
+    "\n",
+    "This dataset collects emails from a variety of different sources of spam, including \"advertisements for products/websites, make money fast schemes, chain letters, pornography, and more.\" The collection of emails labeled as non-spam come from \"filed work and personal e-mails.\" The dimensions of the dataset are 4601 X 57, meaning that there are 4601 emails total described by 57 different attributes characterizing each email. \n",
+    "\n",
+    "The features included in the data largely contains information regarding how frequently a word or character occured in the email. The data can generally be understood through the following descriptions (quoted directly from the data description on Kaggle):\n",
+    "\n",
+    "1. Any column name matching the format \"word_freq_WORD\" is intended to mean: \"the percentage of words in the e-mail that match WORD, i.e. 100 * (number of times the WORD appears in the e-mail) / total number of words in e-mail. A 'word' in this case is any string of alphanumeric characters bounded by non-alphanumeric characters or end-of-string.\" There are about 48 of theses types of variables with a domain of [0, 100] -- it is highly likely that there were more than 48 total unique words in the corpus of emails included in the data, but we believe the authors of the dataset only included words that were non-trivial (either by virtue of their actual prevalance or by the abstract meaning of the word itself, such as the word \"the\"). The details surrounding this process are not clear to us.\n",
+    "\n",
+    "2. Similarly, column names under the format \"char_freq_CHAR\" means \" the percentage of characters in the email that match CHAR, i.e. 100 * (number of CHAR occurences) / total characters in email.\" This column also has a domain of [0, 100].\n",
+    "\n",
+    "The rest of the columns (except #6) have a continuous domain of [1, infinity) \n",
+    "\n",
+    "3. A column indicating \"the average length of uninterrupted sequences of capital letters.\" \n",
+    "\n",
+    "4. A coluumn indicating \"the length of the longest uninterrupted sequence of capital letters.\" \n",
+    "\n",
+    "5. A column indicating \"the total number of capital letters in the email.\"\n",
+    "\n",
+    "6. The class label, with (1) indicating that the email is spam and (0) for non-spam."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jongong/opt/anaconda3/lib/python3.8/site-packages/scipy/__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.5)\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.neighbors import KNeighborsClassifier as kn\n",
@@ -25,30 +76,8 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For our project, we will be evaluating the performance of different machine learning techniques on the process of predicting whether an email is spam or not. We will be using the dataset found [here](https://www.kaggle.com/datasets/somesh24/spambase) as the source of our information for training and testing.\n",
-    "\n",
-    "\n",
-    "This dataset collects emails from a variety of different sources of spam, including \"advertisements for products/websites, make money fast schemes, chain letters, pornography, and more.\" The collection of emails labeled as non-spam come from\"filed work and personal e-mails.\" The data itself largely contains information attributes containing information regarding how frequently a word or character occured in the email.\n",
-    "\n",
-    "For instance, any column name matching the description: \"word_freq_WORD\" is intended to mean: \"the percentage of words in the e-mail that match WORD, i.e. 100 * (number of times the WORD appears in the e-mail) / total number of words in e-mail. A “word” in this case is any string of alphanumeric characters bounded by non-alphanumeric characters or end-of-string.\"\n",
-    "\n",
-    "#### *add more here*\n"
    ]
   },
   {
@@ -2812,14 +2841,18 @@
    "source": [
     "## 1. Model #1: K-Nearest Neighbors\n",
     "\n",
-    "Steps (loosely) followed from this website: https://www.datacamp.com/tutorial/k-nearest-neighbor-classification-scikit-learn"
+    "Steps (loosely) followed from this website: https://www.datacamp.com/tutorial/k-nearest-neighbor-classification-scikit-learn\n",
+    "\n",
+    "We were interested in applying K-Nearest Neighbors because it seemed logical to assume that spam-emails would exhibit a high degree of similarity in their feature values. Additionally, since all our features were numerical in nature it was natural that we test whether the emails with the smallest euclidean distance towards each other would be a good predictor of their respective class labels, as we would not have to do any reconstruction of the data to convert categorical labels into V-many binary indicator features. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a. Determining what k-value to use using Cross-Validation"
+    "### Determining what k-value to use using Cross-Validation\n",
+    "\n",
+    "In order to determine what k-value to use, we decided to implement cross-validation. This process essentially runs a KNN classifier for different variations of the data (in this case I used a parameter of cv = 5, so it was a 4:1 split between training and test data that was different for each k-value) for different values of K. I then plotted the accuracy score of each k-value to visually determine which k-value yielded the most success in predicting spam emails."
    ]
   },
   {
@@ -2905,12 +2938,14 @@
     "TP = True Positives <br>\n",
     "FP = False Positives<br>\n",
     "\n",
-    "Accuracy = the number of correct correct predictions / the total number of predictions made.<br>\n",
+    "Accuracy = the number of correct predictions / the total number of predictions made.<br>\n",
     "\n",
     "\n",
     "Precision = (TP) / (TP + FP)\n",
     "\n",
-    "Recall = (TP) / (TP + FN) "
+    "Recall = (TP) / (TP + FN) \n",
+    "\n",
+    "As evident in the results below, the KNN model with a K-value equal to 1 had about an 81% rate of accuracy, meaning that it made the correct prediction about 81% of the time. However, the precision for this model did not perform as well, exhibiting only a ~ 76% precision rate. This can be interpreted as meaning that the when the model did predict that an email was positive, it was only correct about 75% of the time. Recalling back our #2 consideration in our motivation (valuing a high degree of precision), this was a relatively poor outcome. Overall, the KNN algorithm performed satisfactorily but definitely did not seem like it was the best option for the task."
    ]
   },
   {
@@ -2939,30 +2974,6 @@
     "print(\"Precision:\", precision)\n",
     "print(\"Recall:\", recall)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### c. Training the model using the Epsilon Ball Method"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.8121606948968513\n",
-      "Precision: 0.7578347578347578\n",
-      "Recall: 0.751412429378531\n"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
