--- a/SpamFilter.ipynb
+++ b/SpamFilter.ipynb
@@ -17,28 +17,18 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Introduction"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
@@ -53,6 +43,22 @@
     "For instance, any column name matching the description: \"word_freq_WORD\" is intended to mean: \"the percentage of words in the e-mail that match WORD, i.e. 100 * (number of times the WORD appears in the e-mail) / total number of words in e-mail. A “word” in this case is any string of alphanumeric characters bounded by non-alphanumeric characters or end-of-string.\"\n",
     "\n",
     "#### *add more here*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -1009,8 +1015,9 @@
    "metadata": {},
    "source": [
     "## PCA\n",
-    "To get a better idea of how the data separates, we will do PCA to get the two highest eigenvectors of variance and see how they graph. We can see that taking the first two principal components explains 0.99806998 of the variance, so looking at this graph should illuminate how the data separates. As we an see from the overlap, this is not linearly separable, and it makes sense that the perceptron functioned so poorly. \n",
-    "We can also get a better sense of how the data is spread. There are"
+    "To get a better idea of how the data separates, we will do PCA to get the two highest eigenvectors of variance and see our data looks when projected onto these vectors. We can see that taking the first two principal components explains 0.99806998 of the variance, so looking at this graph does a good job of illuminating how the data separates. Spam emails were represented with red and legitimate emails were represented with blue. As we an see from the overlap, this is not linearly separable, and it makes sense that the perceptron functioned so poorly.\n",
+    "\n",
+    "We can also get a better sense of how the data is spread. Most legitimate emails are clustered towards the bottom of this graph. Many spam emails are clearly distinguishable, as they are far above the legitimate ones here and clearly distinct. However, many spam emails are right in the cluster with the legitimate emails on the bottom. This indicated that techniques reliant on separating the data such as SVM or perceptrons won't function well on this data."
    ]
   },
   {
@@ -1066,12 +1073,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Neural network\n",
     "We trained a neural network on the data using relu and an adaptive learning rate which got us 85 percent accuracy and precision. This is quite good, as it classifies 85% of email correctly and only 15% of emails flagged shouldn't have been."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1103,12 +1111,12 @@
    "metadata": {},
    "source": [
     "## Naive Bayes\n",
-    "We thought to train a naive bayes on the data since it gives us a likelihood of an email being spam as opposed to just a binary classification. This allows for a spam email filter to definitively filter out the most likely to be spam, and flag less likely emails for manual review by the user to avoid throwing out legitimate emails. We can see that the naive bayes performs about en par with the K Nearest Neighbors algorithm and the neural network, but not as well as the decision tree or random forest. We used a Bernoulli Naive Bayes since each email can be thought of as a yes or no experiment, which is what the Bernoulli distribution is."
+    "We thought to train a naive bayes on the data since it gives us a likelihood of an email being spam as opposed to just a binary classification. This allows for a spam email filter to definitively filter out the most likely to be spam, and flag less likely emails for manual review by the user to avoid throwing out legitimate emails. We can see that the naive bayes performs about en par with the K Nearest Neighbors algorithm and the neural network, but not as well as the decision tree or random forest. We used a Bernoulli Naive Bayes since each email can be thought of as a yes or no experiment, which is what the Bernoulli distribution is. For further explanation about Naive Bayes, read [here](https://towardsdatascience.com/naive-bayes-classifier-81d512f50a7c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1207,6 @@
     "print(\"Recall:\", recall)\n",
     "probs = regression.predict_proba(test_x)\n",
     "confident = []\n",
-    "print(probs)\n",
     "for x in probs:\n",
     "    if x[1] > .8:\n",
     "        confident.append(1)\n",
