--- a/Compiled Final Project.ipynb
+++ b/Compiled Final Project.ipynb
@@ -1306,7 +1306,20 @@
    "id": "2894ed37",
    "metadata": {},
    "source": [
-    "### Decision Trees"
+    "### Decision Trees\n",
+    "“In machine learning, a Decision Tree is a supervised learning technique. It is capable of\n",
+    "working with both classification and regression techniques. It resembles a tree with nodes, as the\n",
+    "name implies. The amount of criteria determines the branches. It divides data into these branches\n",
+    "until it reaches a threshold unit. There are root nodes, child nodes, and leaf nodes in a decision\n",
+    "tree. Random forest is also used for supervised learning, although it has a lot of power. It's quite\n",
+    "popular. The main distinction is that it does not rely on a single decision. It assembles\n",
+    "randomized decisions based on many decisions and then creates a final decision depending on\n",
+    "the majority.”\n",
+    "(https://www.upgrad.com/blog/random-forest-vs-decision-tree/#:~:text=A%20decision%20tree%20combines%20some,forest%20model%20needs%20rigorous%20training)\n",
+    "\n",
+    "The reason we wanted to do a random forest as well is that Random forests tend to offer better\n",
+    "predictive performance, reduced overfitting, and more reliable feature importance measures\n",
+    "compared to a single decision tree."
    ]
   },
   {
@@ -1402,6 +1415,34 @@
     "        \n",
     "        \n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0e38bddb",
+   "metadata": {},
+   "source": [
+    "At first we just did one iteration of the random forest and didn’t have any depth, but we decided\n",
+    "that for this classification we could do a depth 10 random forest with our n_classifiers set to 100\n",
+    "Decision Trees to get better accuracy to decipher which email is spam or not and what the best\n",
+    "feature is."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "17e0ccec",
+   "metadata": {},
+   "source": [
+    "At first we just did one iteration of decision trees and didn’t have any depth, but we decided that\n",
+    "for this classification we could do a depth 10 decision tree to get better accuracy to decipher\n",
+    "which email is spam or not.\n",
+    "We wanted to find the Accuracy, Recall, and Precision of the decision tree and our results were\n",
+    "really good at deciphering which emails were spam and which were not.\n",
+    "Next we wanted to try and find which split had the best information gain in the decision tree. We\n",
+    "did this by extracting feature importances, finding the indices of those important features, and\n",
+    "listing the top 5 best splits within the tree.\n"
    ]
   },
   {
